--- a/src/app/layout/navbar/category/category.component.html
+++ b/src/app/layout/navbar/category/category.component.html
@@ -1,4 +1,4 @@
-<div class="categories pt-3 mx-8">
+<div class="categories pt-3 mx-8 flex justify-center">
     @for (category of categories; track category.technicalName) {
         @if (category.technicalName !== 'TODO') {
             <div class="flex flex-column align-items-center items-center justify-center pb-3 category"
