--- a/src/app/layout/navbar/avatar/avatar.component.html
+++ b/src/app/layout/navbar/avatar/avatar.component.html
@@ -1,6 +1,6 @@
 <div class="flex align-content-center">
-    @if(imageUrl() != null) {
-        <img src="{{imageUrl()}}" alt="user-avatar" class="border-round-3xl avatar"
+    @if(imagenUrl() != null) {
+        <img src="{{imagenUrl()}}" alt="user-avatar" class="border-round-3xl avatar"
             [ngClass] = "avatarSize()">
     } @else {
         <div class="flex align-items-center justify-content-center unknow-user"
