--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -21,11 +21,14 @@
             </button>
         </div>
         <div class="p-toolbar-group-end sm:hidden md:flex">
-            <a class="p-button p-button-link">Pearson</a>
+            @if(authService.isAuthenticated()) {
+                  <a class="p-button p-button-link">Inicio</a>
+            }
             <p-menu #menu [model]="currentMenuItems" [popup]="true" styleClass="border-round-xl mt-1"></p-menu>
-            <button (click)="menu.toggle($event)" class="menu flex align-content-center justify-content-around ml-2 pl-3 p-2 border-gray-200 focus:shadow-none hover:shadow-1 border-round-3xl bg-white p-button">
+            <button (click)="menu.toggle($event)" 
+                    class="menu flex align-items-center justify-content-around ml-2 pl-3 p-2 border-gray-200 focus:shadow-none hover:shadow-1 border-round-3xl bg-white p-button">
                 <fa-icon [icon]="'bars'" class="text-sm text-dark mr-3"></fa-icon>
-                <app-avatar [imageUrl]="" avatarSize="avatar-sm"></app-avatar>
+                <app-avatar [imagenUrl]="connectedUser.avatar" avatarSize="avatar-sm"></app-avatar>
             </button>
         </div>
     </p-toolbar>
