--- a/src/app/landlord/properties-create/properties-create.component.html
+++ b/src/app/landlord/properties-create/properties-create.component.html
@@ -5,6 +5,35 @@
             (categoryChange)="onCategoryChange($event)"
             (stepValidityChange)="onValidityChange($event)"></app-category-step>
         }
+        @case (LOCATION) {
+            <app-location-step [location]="newListing.location"
+            (locationChange)="onLocationChange($event)"
+            (stepValidityChange)="onValidityChange($event)"></app-location-step>
+        }
+        @case (INFO) {
+            <div class="mb-5">
+                <h1 class="mb-1">Brindanos Algunos Conceptos Básicos sobre tu Lugar</h1>
+                <h2 class="mt-0">Agregará más detalles más adelante.</h2>
+                <app-info-step [infos]="newListing.infos"
+                (infoChange)="onInfoChange($event)"
+                (stepValidityChange)="onValidityChange($event)"></app-info-step>
+            </div>
+        }
+        @case (PHOTOS) {
+            <app-picture-step [pictures]="newListing.pictures"
+            (picturesChange)="onPictureChange($event)"
+            (stepValidityChange)="onValidityChange($event)"></app-picture-step>
+        }
+        @case (DESCRIPTION) {
+            <app-description-step [description]="newListing.description"
+            (descriptionChange)="onDescriptionChange($event)"
+            (stepValidityChange)="onValidityChange($event)"></app-description-step>
+        }
+        @case (PRICE) {
+            <app-price-step [price]="newListing.price"
+            (priceChange)="onPriceChange($event)"
+            (stepValidityChange)="onValidityChange($event)"></app-price-step>
+        }
     }
 </div>
 <app-footer-step [currentStep]="currentStep"
