--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,12 +1,12 @@
 <div class="footer text-sm border-solid border-1 border-200 flex
 justify-content-start align-items-center px-6 py-5">
-  <span>© 2024 Pearson, Inc.</span>
+  <span>© 2024 PearsonInc</span>
   <fa-icon icon="circle"></fa-icon>
-  <span>Terms</span>
+  <span>Terminos</span>
   <fa-icon icon="circle"></fa-icon>
-  <span>Sitemap</span>
+  <span>Mapa</span>
   <fa-icon icon="circle"></fa-icon>
-  <span>Privacy</span>
+  <span>Privacidad</span>
   <fa-icon icon="circle"></fa-icon>
-  <span>Your privacy choices</span>
+  <span>Normativa de Privacidad</span>
 </div>
