--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,11 +1,11 @@
 @import "./../../../assets/scss/airbnb-variables";
 
 .footer {
-    background-color: $footerBgColor;
+  background-color: $footerBgColor;
 }
 
 fa-icon {
-    margin-left: 10px;
-    font-size: 3px;
-    margin-top: 10px;
+  margin-left: 10px;
+  font-size: 3px;
+  margin-right: 10px;
 }
