--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="p-toolbar-group-end sm:hidden md:flex">
             @if(authService.isAuthenticated()) {
-                  <a class="p-button p-button-link" (click)="openNewListing()">Inicio</a>
+                  <a class="p-button p-button-link" (click)="openNewListing()">Agregar una Habitacion</a>
             }
             <p-menu #menu [model]="currentMenuItems" [popup]="true" styleClass="border-round-xl mt-1"></p-menu>
             <button (click)="menu.toggle($event)" 
